# address_book

./: .env  .gitignore  README.md  pyproject.toml
src/: main.py
src/core/: database.py  logging.py  settings.py
src/models/: address.py
src/routes/: address.py
src/schemas/: address.py
src/services/: address_service.py
src/utils/: geo.py
